TM/style: minor styling changes and z-index fixes

--- a/src/components/ActionModal/ActionModal.scss
+++ b/src/components/ActionModal/ActionModal.scss
@@ -63,6 +63,7 @@
         border-radius: 8px;
         background-color: $color-mvp-yellow;
         cursor: pointer;
+        @extend .body-copy;
         // align-self: flex-end;
         justify-content: center;
         // gap: 8px;
